--- a/index.css
+++ b/index.css
@@ -196,6 +196,8 @@ footer a { margin: 0.3125rem/*5px*/;}
 
 	header div.welcome-text h1 { font-size: 3.3125rem; }
 
+	header div.description-of-self div.profile-picture { height: 13.5rem; margin-bottom:4.5rem; margin-top: 2rem; margin:left:0;}
+
 }
 
 
