--- a/index.css
+++ b/index.css
@@ -553,9 +553,9 @@ footer a.fb { margin-left:68%; }
 
 @media all and (max-width:320px) {
 
-#page { width: 90vw; }
+#page { width: 89.5vw; }
 
-header div.welcome-text h1 { font-size: 1.8rem; }
+header div.welcome-text h1 { font-size: 1.7rem; }
 
 header div.welcome-text h1 > span { display:none; }
 
@@ -584,6 +584,11 @@ header div.description-of-self div.block-quote blockquote p.quote::after { font-
 header div.description-of-self div.block-quote blockquote p.quote span { font-size: 1rem; }
 header div.description-of-self div.block-quote blockquote p.credit { font-size: 1.2rem;}
 
+section.professionalexp div.content-professional {  border: thin black; box-shadow: 0 0 .5rem #C2DFFF; }
+section.professionalexp div.content-techm {  border: thin black; box-shadow: 0 0 .5rem #C2DFFF; }
+section.professionalexp div.content-oracle {  border: thin black; box-shadow: 0 0 .5rem #C2DFFF; }
+
+
 section.technical-interest p.text-tech { font-size:1.2rem; margin-bottom:7.3rem; }
 
 section aside div.technologies-interested div.tech.js p { font-size: 1.25rem; margin-left:30%;}
@@ -598,10 +603,10 @@ section aside div.technologies-interested div.tech.css p { font-size: 1.5rem; ma
 section aside div.technologies-interested div.tech.quotepart { display:none; }
 
 section.section-work div.work div.work-image { display:none; }
-section.section-work { height:16rem; }
-section.section-work div.work { height:12rem; }
+section.section-work { height:17rem; }
+section.section-work div.work { height:14rem; }
 
-section > article { background-size: 100% 30%;   }
+section > article { background-size: 100% 30%; }
 article div.recommended p.article-para { font-size: 1.2rem; margin-top:7rem; } 
 
 footer p { display:block; font-size: 1rem; }
@@ -609,7 +614,7 @@ footer a {margin:1%;}
 
 }
 
-@media all and (max-width:201px) {
+@media all and (max-width:240px) {
 
 	section.technical-interest p.text-tech { font-size:1.1rem; margin-bottom:7.5rem; }
 
@@ -629,6 +634,11 @@ footer a {margin:1%;}
 	section aside div.technologies-interested div.tech.bc p { font-size: 1.3rem; margin:2%;}
 	section aside div.technologies-interested div.tech.ai p { font-size: 1.3rem; margin:2%;}
 	section aside div.technologies-interested div.tech.css p { font-size: 1.5rem; margin:2%; }
+
+	section.professionalexp div.content-professional {  border: thin black; box-shadow: 0 0 .2rem #C2DFFF; }
+	section.professionalexp div.content-techm {  border: thin black; box-shadow: 0 0 .2rem #C2DFFF; }
+	section.professionalexp div.content-oracle {  border: thin black; box-shadow: 0 0 .2rem #C2DFFF; }
+
 
 	section.professionalexp div.content-professional p.prof-txt, ul li { font-size:1rem; margin-left:0;}
 	section.professionalexp div.content-professional ul li { font-size: 1rem;}
