--- a/index.css
+++ b/index.css
@@ -591,7 +591,7 @@ section.professionalexp div.content-oracle {  border: thin black; box-shadow: 0 
 
 section.technical-interest p.text-tech { font-size:1.2rem; margin-bottom:7.3rem; }
 
-section aside div.technologies-interested div.tech.js p { font-size: 1.25rem; margin-left:30%;}
+section aside div.technologies-interested div.tech.js p { font-size: 1.3rem; margin-left:31%;}
 section aside div.technologies-interested div.tech.html p { font-size: 1.5rem; margin-left:40%;}
 section aside div.technologies-interested div.tech.java p { font-size: 1.9rem; }
 section aside div.technologies-interested div.tech.db p { font-size: 1.4rem; }
@@ -615,6 +615,8 @@ footer a {margin:1%;}
 }
 
 @media all and (max-width:240px) {
+
+	header div.welcome-text h1 { font-size: 1.3rem; }
 
 	section.technical-interest p.text-tech { font-size:1.1rem; margin-bottom:7.5rem; }
 
