--- a/index.css
+++ b/index.css
@@ -594,10 +594,10 @@ section.technical-interest p.text-tech { font-size:1.2rem; margin-bottom:7.3rem;
 section aside div.technologies-interested div.tech.js p { font-size: 1.5rem; margin-left:31%;}
 section aside div.technologies-interested div.tech.html p { font-size: 1.5rem; margin-left:40%;}
 section aside div.technologies-interested div.tech.java p { font-size: 1.9rem; }
-section aside div.technologies-interested div.tech.db p { font-size: 1.4rem; }
+section aside div.technologies-interested div.tech.db p { font-size: 1.45rem; }
 section aside div.technologies-interested div.tech.bc p { font-size: 1.5rem; margin-left:35%; }
-section aside div.technologies-interested div.tech.db p { font-size: 1.2rem; }
-section aside div.technologies-interested div.tech.ai p { font-size: 1.2rem; }
+section aside div.technologies-interested div.tech.db p { font-size: 1.5rem; }
+section aside div.technologies-interested div.tech.ai p { font-size: 1.5rem; }
 section aside div.technologies-interested div.tech.css p { font-size: 1.5rem; margin-left:40%; }
 
 section aside div.technologies-interested div.tech.quotepart { display:none; }
@@ -618,9 +618,11 @@ footer a {margin:1%;}
 
 	header div.welcome-text h1 { font-size: 1.3rem; }
 
-	section.technical-interest p.text-tech { font-size:1.1rem; margin-bottom:7.5rem; }
+	header div.description-of-self div.profile-picture { width: 70%; height: 10.8125rem;  }
 
-    section aside div.technologies-interested div.tech { margin-bottom:2%; }
+	section.technical-interest p.text-tech { font-size:1.1rem; margin-bottom:7.5rem; }
+             
+    section aside div.technologies-interested div.tech { margin-bottom:2%; border: thin white; box-shadow: 0 0 1rem white; }
 	section aside div.technologies-interested div.tech.html { background: none; height:50%; text-align:center;}
 	section aside div.technologies-interested div.tech.css { background: none; height:50%; text-align:center;}
 	section aside div.technologies-interested div.tech.js { background: none; height:50%; text-align:center;}
