--- a/index.css
+++ b/index.css
@@ -514,7 +514,8 @@ footer a.fb { margin-left:68%; }
 
 	article div.recommended h2 { visibility: hidden; margin-top:.5rem;}
 	article div.recommended p.article-para { margin-left: 0; font-size: 1.4rem; margin-top:13rem;}
-	article div.recommended p.article-para::before { content:'A Dao of Web Design by John Allsopp'; display: block; font-style: italic; font-family: 'lobster', cursive; font-size: 1.4875rem; margin-bottom:1rem;}
+	article div.recommended p.article-para::before { content:'A Dao of Web Design by John Allsopp'; display: block; font-style: italic; font-family: 'lobster', cursive; 
+												     font-size: 1.4875rem; margin-bottom:1rem;}
 	article div.recommended p.article-para a > span { display:none; }
 	article div.recommended p.article-para a { width: 80%; margin-left:9%;}
 	/* Footer */
@@ -538,13 +539,15 @@ footer a.fb { margin-left:68%; }
 	header div.description-of-self div.block-quote blockquote { box-sizing: border-box; width: 80vw;  }
 	header div.description-of-self div.block-quote { margin:0; width:50%; text-align:justify; text-justify:inter-word; }
 
-	section p.text-tech { font-size:1.2rem; }
+	section p.text-tech { font-size:1.2rem; margin-bottom:3rem;}
 	section aside div.technologies-interested div.tech.js p { font-size: 2rem; }
 
 	section.section-work div.work > p { font-size:1.2rem; }
 	section.section-work div.work h2.h2-work { font-size:1.2rem; }
 
-	section.section-work div.work div.work-image { background:url(images/work_img_420.PNG) no-repeat; background-size: 100% 100%; }
+	section.section-work div.work div.work-image { background:url(images/work_img_420.PNG) no-repeat; background-size: 100% 90%; }
+
+	article div.recommended p.article-para::before { font-size: 1.3875rem; margin-bottom:1.5rem;}
 
     footer a.fb { margin-left:18%; }
 	
