--- a/index.css
+++ b/index.css
@@ -621,7 +621,7 @@ footer a {margin:1%;}
 
 	header div.welcome-text h1 { font-size: 1.3rem; }
 
-	header div.description-of-self div.profile-picture { width: 70%; height: 10.8125rem;  }
+	header div.description-of-self div.profile-picture { width: 50%; height: 6.8125rem;  }
 
 	header div.description-of-self div.about-content h1 { font-size: 1.2rem; } 
 	header div.description-of-self div.about-content h3 { font-size: 1.1rem; } 
@@ -630,6 +630,7 @@ footer a {margin:1%;}
 	section.technical-interest p.text-tech { font-size:1.1rem; margin-bottom:7.5rem; }
              
     section aside div.technologies-interested div.tech { margin-bottom:2%; border: thin white; box-shadow: 0 0 1rem white; }
+    section aside div.technologies-interested div.tech:hover { transform: scale(1,1); -webkit-transform: scale(1,1);-o-transform: scale(1,1);-moz-transform: scale(1,1);  }
 	section aside div.technologies-interested div.tech.html { background: none; height:50%; text-align:center;}
 	section aside div.technologies-interested div.tech.css { background: none; height:50%; text-align:center;}
 	section aside div.technologies-interested div.tech.js { background: none; height:50%; text-align:center;}
@@ -652,17 +653,17 @@ footer a {margin:1%;}
 
 
 	section.professionalexp div.content-professional p.prof-txt, ul li { font-size:1rem; margin-left:0;}
-	section.professionalexp div.content-professional ul li { font-size: 1rem;}
+	section.professionalexp div.content-professional ul li { font-size: .9rem;}
 	section.professionalexp div.content-professional:hover { transform: scale(1,1); -webkit-transform: scale(1,1);-o-transform: scale(1,1);-moz-transform: scale(1,1); }
 
 	section.professionalexp div.content-techm:hover { transform: scale(1,1);-webkit-transform: scale(1,1);-o-transform: scale(1,1);-moz-transform: scale(1,1);}
-	section.professionalexp div.content-techm p.prof-para { font-size: 1rem; }
-	section.professionalexp div.content-techm h2.prof-header { font-size: 1rem; }
+	section.professionalexp div.content-techm p.prof-para { font-size: .9rem; }
+	section.professionalexp div.content-techm h2.prof-header { font-size: .9rem; }
 
 	
 	section.professionalexp div.content-oracle:hover { transform: scale(1,1); -webkit-transform: scale(1,1);-o-transform: scale(1,1);-moz-transform: scale(1,1); }
-	section.professionalexp div.content-oracle p.prof-para { font-size: 1rem; }
-	section.professionalexp div.content-oracle h2.prof-header { font-size: 1rem; }
+	section.professionalexp div.content-oracle p.prof-para { font-size: .9rem; }
+	section.professionalexp div.content-oracle h2.prof-header { font-size: .9rem; }
 
 	section.section-work { height: 23rem; }
 	section.section-work div.work { height: 90%; }
